Added pictures of cities

--- a/cities.html
+++ b/cities.html
@@ -48,6 +48,20 @@
             based on the screen size and available space.
         </p>
 
+        <div class="container">
+            <div class="image-container">
+              <img src="nizamabad.jpg" class="img-fluid" width="300" height="300" alt="A pic of Nizamabad city">
+              <img src="armoor.jpg" class="img-fluid" width="300" height="300" alt="A pic of Armoor">
+              <img src="lucknow.jpg" class="img-fluid" width="300" height="300"  alt="A pic of Lucknow">
+            </div>
+
+            <div class="thumbnail-container">
+              <img src="adilabad.jpg" class ="img-thumbnail" width="300" height="300" alt="icon"> 
+              <img src="ankapur.jpg" class="img-thumbnail" width="300" height="300" alt="icon">
+              <img src="likhapur.jpg" class="img-thumbnail" width="300" height="300" alt="icon">
+            </div>
+        </div>
+          
 
 
 
