Added Tables and Buttons

--- a/cities.html
+++ b/cities.html
@@ -49,18 +49,85 @@
         </p>
 
         <div class="container">
-            <div class="image-container">
-              <img src="nizamabad.jpg" class="img-fluid" width="300" height="300" alt="A pic of Nizamabad city">
-              <img src="armoor.jpg" class="img-fluid" width="300" height="300" alt="A pic of Armoor">
-              <img src="lucknow.jpg" class="img-fluid" width="300" height="300"  alt="A pic of Lucknow">
-            </div>
+            <img src="nizamabad.jpg" class="img-fluid" width="300" height="300" alt="A pic of Nizamabad city">
+            <img src="armoor.jpg" class="img-fluid" width="300" height="300" alt="A pic of Armoor">
+            <img src="lucknow.jpg" class="img-fluid" width="300" height="300"  alt="A pic of Lucknow">
+        </div>
 
-            <div class="thumbnail-container">
+        <div class="container">
               <img src="adilabad.jpg" class ="img-thumbnail" width="300" height="300" alt="icon"> 
               <img src="ankapur.jpg" class="img-thumbnail" width="300" height="300" alt="icon">
               <img src="likhapur.jpg" class="img-thumbnail" width="300" height="300" alt="icon">
             </div>
         </div>
+        <table class="table table-striped table-hover table-bordered border-primary">
+            <caption>A table of names of Cities, Rivers, Trees</caption>
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Letter</th>
+                    <th scope="col">City</th>
+                    <th scope="col">River</th>
+                    <th scope="col">Tree</th>
+                </tr>
+            </thead>
+            <tbody>
+              <tr>
+              <th scope="row">A</td>
+              <td>Amristar</td>
+              <td>Abita River</td>
+              <td>Aliso</td>
+            </tr>
+            <tr>
+              <th scope="row">S</th>
+              <td>Sydney</td>
+              <td>Sticky River</td>
+              <td>Sandalwood</td>
+            </tr>
+            <tr>
+              <th scope="row">H</th>
+              <td>Houston</td>
+              <td>Hudson River</td>
+              <td>Hackberry</td>
+            </tr>
+            <tr>
+              <th scope="row">R</th>
+              <td>Roseville</td>
+              <td>Ruby River</td>
+              <td>Redbay</td>
+            </tr>
+            <tr>
+              <th scope="row">P</th>
+              <td>Pennsylvania</td>
+              <td>Pocasset River</td>
+              <td>Palma pita</td>
+            </tr>
+            <tr>
+              <th scope="row">N</th>
+              <td>Nellore</td>
+              <td>Naches River</td>
+              <td>Northern Hackberry</td>
+            </tr>
+          </tbody>
+        </table>
+        <div class="container">
+            <div class="btn-toolbar" role="toolbar" aria-label="Button groups">
+                <div class="btn-group" role="group" aria-label="Letters with images">
+                    <button type="button" class="btn btn-success">A</button>
+                    <button type="button" class="btn btn-success">S</button>
+                    <button type="button" class="btn btn-success">H</button>
+                </div>
+                <div class="btn-group" role="group" arial-label="Alert buttons">
+                    <button type="button" class="btn btn-warning">R</button>
+                    <button type="button" class="btn btn-warning">P</button>
+                </div>
+                <div class="btn-group" role="group" arial-label="Remaining letters">
+                    <button type="button" class="btn btn-danger">N</button>
+                </div>
+            </div>
+        </div>
+        <br>
+
+
           
 
 
