--- a/cities.html
+++ b/cities.html
@@ -215,12 +215,51 @@
     </form>
 
     </div>
-  </form>
+    </form>
+    <br>
+    <br>
+    
+  <h1>Bonus</h1>
+  <br>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4 mb-3">
+        <div class="card" style="width: 18rem;">
+          <img src="nizamabad.jpg" class="card-img-top" alt="Nizamabad">
+          <div class="card-body">
+            <h5 class="card-title">Nizamabad</h5>
+            <p class="card-text">Nizamabad, also known as Induru, is a city in the Indian state of Telangana.</p>
+            <a href="https://en.wikipedia.org/wiki/Nizamabad,_Telangana" class="btn btn-primary">Learn More</a>
+        </div>
+      </div>
+    </div>
+    
+    <div class="col-sm-4 mb-3">
+      <div class="card" style="width: 18rem;">
+        <img src="armoor.jpg" class="card-img-top" alt="Armoor">
+        <div class="card-body">
+          <h5 class="card-title">Armoor</h5>
+          <p class="card-text">Armoor is one of the niceest places in the state of Telangana</p>
+          <a href="https://en.wikipedia.org/wiki/Armoor" class="btn btn-primary">Learn More</a>
+        </div>
+      </div>
+    </div>
 
+    <div class="col-sm-4 mb-3">
+      <div class="card" style="width: 18rem;">
+        <img src="lucknow.jpg" class="card-img-top" alt="Lucknow">
+        <div class="card-body">
+          <h5 class="card-title">Lucknow</h5>
+          <p class="card-text"> Lucknow is the capital and the largest city of the Indian state of Uttar Pradesh. </p>
+          <a href="https://en.wikipedia.org/wiki/Lucknow" class="btn btn-primary">Learn More</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
+</div>
 
 
 
 </body>
-
 </html>
