--- a/cities.html
+++ b/cities.html
@@ -75,14 +75,14 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-md">
           <img src="nizamabad.jpg" class="img-fluid" width="400"
             alt="A pic of Nizamabad city">
         </div>
-        <div class="col-sm-4">
+        <div class="col-md">
           <img src="armoor.jpg" class="img-fluid " width="400"alt="A pic of Armoor">
         </div>
-        <div class="col-sm-4">
+        <div class="col-md">
           <img src="lucknow.jpg" class="img-fluid" width="400" alt="A pic of Lucknow">
 
         </div>
@@ -234,27 +234,27 @@
       </div>
     </div>
     
-    <div class="col-sm-4 mb-3">
-      <div class="card" style="width: 18rem;">
-        <img src="armoor.jpg" class="card-img-top" alt="Armoor">
-        <div class="card-body">
-          <h5 class="card-title">Armoor</h5>
-          <p class="card-text">Armoor is one of the niceest places in the state of Telangana</p>
-          <a href="https://en.wikipedia.org/wiki/Armoor" class="btn btn-primary">Learn More</a>
+       <div class="col-sm-4 mb-3">
+         <div class="card" style="width: 18rem;">
+          <img src="armoor.jpg" class="card-img-top" alt="Armoor">
+          <div class="card-body">
+            <h5 class="card-title">Armoor</h5>
+            <p class="card-text">Armoor is one of the niceest places in the state of Telangana</p>
+            <a href="https://en.wikipedia.org/wiki/Armoor" class="btn btn-primary">Learn More</a>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="col-sm-4 mb-3">
-      <div class="card" style="width: 18rem;">
-        <img src="lucknow.jpg" class="card-img-top" alt="Lucknow">
-        <div class="card-body">
-          <h5 class="card-title">Lucknow</h5>
-          <p class="card-text"> Lucknow is the capital and the largest city of the Indian state of Uttar Pradesh. </p>
-          <a href="https://en.wikipedia.org/wiki/Lucknow" class="btn btn-primary">Learn More</a>
+       <div class="col-sm-4 mb-3">
+        <div class="card" style="width: 18rem;">
+          <img src="lucknow.jpg" class="card-img-top" alt="Lucknow">
+          <div class="card-body">
+            <h5 class="card-title">Lucknow</h5>
+            <p class="card-text"> Lucknow is the capital and the largest city of the Indian state of Uttar Pradesh. </p>
+            <a href="https://en.wikipedia.org/wiki/Lucknow" class="btn btn-primary">Learn More</a>
+          </div>
         </div>
       </div>
-    </div>
   </div>
 
 </div>
